@@ -2,7 +2,7 @@
  * Copyright (C) 1995 Spencer Kimball and Peter Mattis
  *
  * gimpdockbook.h
- * Copyright (C) 2001 Michael Natterer <mitch@gimp.org>
+ * Copyright (C) 2001-2007 Michael Natterer <mitch@gimp.org>
  *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
@@ -42,6 +42,9 @@ struct _GimpDockbook
 
   GimpDock      *dock;
   GimpUIManager *ui_manager;
+
+  guint          tab_hover_timeout;
+  GimpDockable  *tab_hover_dockable;
 };
 
 struct _GimpDockbookClass
